# Beacon-llm

./: .gitignore  README.md  config.json  pyproject.toml
src/beacon_llm/: main.py
src/beacon_llm/services/: config.py  config_service.py  fine_tune.py  inference.py  llm_service.py
