[project]
name = "beacon-llm"
version = "0.1.0"
description = "Beacon's LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.7.0",
    "llama-cpp-python>=0.3.16",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[project.scripts]
beacon = "beacon_llm.main:main"
