[project]
name = "beacon-llm"
version = "0.1.0"
description = "Beacon's LLM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.3",
    "llama-cpp-python>=0.3.16",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "torchao>=0.16.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]

[project.scripts]
beacon = "beacon_llm.main:main"
