[project]
name = "beacon-llm"
version = "0.1.0"
description = "Beacon's LLM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets",
    "llama-cpp-python",
    "peft",
    "torch",
    "torchao",
    "torchvision",
    "transformers",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]

[project.scripts]
beacon = "beacon_llm.main:main"
